# bitcoin_argus

./: .gitignore  README.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml
argus/: __init__.py  __main__.py  ark_cln.py  bitcart.py  cashu_wallet.py  cashupayserver.py  cli.py  config.py  constants.py  context.py  credentials.py  firewall.py  generate.py  onionkey.py  open_mining.py  ports.py  reset.py  resources.py  secrets.py  shared.py  signetkey.py  tor.py  web_gen.py
argus/bitcart_cards/: __init__.py  build.py  seed_products.py
argus/builders/: __init__.py  _captaind_template.py  ark.py  bitcoind.py  cashu.py  cashu_wallet.py  cashupayserver.py  claimer.py  donations.py  fedimint.py  fulcrum.py  lnd.py  mempool.py  miner.py  woocommerce.py
argus/claimer_src/: Dockerfile  claim.py  claim.sh
argus/faucet/: __init__.py  addresses.py  app.py  approval.py  difficulty.py  donations.py  ip.py  lnd.py  maintenance.py  mempool.py  pow.py  reset.py  rules.py  store.py  wsgi.py
argus/faucet/templates/: faucet.html  faucet_unavailable.html
argus/signet_miner/: Dockerfile  NOTICE.md  mine-signet.sh
argus/web/: __init__.py  app.py  cache.py  content.py  history.py  inventory.py  lnurl.py  metrics.py  requirements.txt  sampler.py  wsgi.py
argus/web/static/: charts.js  faucet-pow-worker.js  faucet.js
argus/web/static/themes/: bootstrap.css  game.css  hacker.css
argus/web/templates/: base.html  contact.html  footer.html  index.html  privacy.html  stats.html  tos.html
argus/web/wasm/: build-wasm.sh  yespower_wasm.c
images/mutinynet-bitcoind/: Dockerfile  README.md
tests/: helpers.py  test_ark.py  test_bitcart_cards.py  test_claimer.py  test_compose.py  test_config.py  test_credentials.py  test_faucet.py  test_faucet_pow.py  test_fedimint.py  test_generate.py  test_lnurl.py  test_metrics_history.py  test_onionkey.py  test_ports.py  test_reset.py  test_resources.py  test_signet.py  test_storefront.py  test_tor.py  test_web.py
