[project]
name = "bitcoin-argus"
version = "0.1.0"
description = "Generate self-contained Docker Compose stacks for Bitcoin testnets"
requires-python = ">=3.11"
dependencies = ["pydantic>=2", "PyYAML>=6"]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
argus = "argus.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["argus", "argus.builders"]
