[project]
name = "bitcoin-argus"
version = "0.1.0"
description = "Generate self-contained Docker Compose stacks for Bitcoin testnets"
requires-python = ">=3.11"
dependencies = ["pydantic>=2", "PyYAML>=6"]

[project.optional-dependencies]
# Runtime deps for the dashboard (argus.web); also mirrored in argus/web/requirements.txt.
web = ["Flask>=3,<4", "gunicorn>=21", "peewee>=3.17", "psutil>=5.9", "docker>=7", "requests>=2.31"]
# The test extra pulls in what the web unit tests import (docker is mocked).
test = ["pytest>=8", "Flask>=3,<4", "peewee>=3.17", "psutil>=5.9"]

[project.scripts]
argus = "argus.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["argus", "argus.builders", "argus.web"]

[tool.setuptools.package-data]
"argus.web" = ["templates/*.html", "static/**/*", "requirements.txt"]
"argus" = ["signet_miner/**/*", "signet_miner/miner", "claimer_src/**/*"]
